fixed chat panel to be scrollable and added text overflow for game title on landing page

--- a/src/app.scss
+++ b/src/app.scss
@@ -51,6 +51,10 @@ a {
 }
 
 
+.simplebar-wrapper {
+  height:100%;
+}
+
 /* width */
 ::-webkit-scrollbar {
   width: 0;
